--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+cekurte_zcpe:
+    resource: "@CekurteZCPEBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 # ------------------------------------------------------------------------------
 # CekurteUploaderBundle
 
