Fixtures for category and plataform.

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -42,3 +42,5 @@ cekurte_fixtures:
         - CekurteCustomUserBundle/City
         - CekurteCustomUserBundle/Group
         - CekurteCustomUserBundle/User
+        - CekurteZCPEBundle/Category
+        - CekurteZCPEBundle/Plataform
