--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -44,3 +44,4 @@ cekurte_fixtures:
         - CekurteCustomUserBundle/User
         - CekurteZCPEBundle/Category
         - CekurteZCPEBundle/Plataform
+        - CekurteZCPEBundle/QuestionType
