--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
         "cekurte/fixturesbundle": "1.0.*@dev",
         "cekurte/generatorbundle": "1.1.*@dev",
         "cekurte/uploaderbundle": "1.0.*@dev",
-        "cekurte/userbundle": "1.1.*@dev"
+        "cekurte/userbundle": "1.1.*@dev",
+
+        "google/apiclient": "1.0.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
