--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -138,9 +138,10 @@ hwi_oauth:
             type:               google
             client_id:          %cekurte_google_api_client_id%
             client_secret:      %cekurte_google_api_client_secret%
-            scope:              "email profile https://www.googleapis.com/auth/gmail.compose"
+            scope:              "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/gmail.compose"
             options:
                 access_type:    offline
+                approval_prompt: force
 
 liip_imagine:
     resolvers:
