List last e-mail from google gmail api.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -27,9 +27,12 @@ parameters:
     cekurte_zcpe_google_group_subject: Pergunta do dia
 
     # Cekurte Google API Bundle
-    cekurte_google_api_application_name: cekurte-zcpe
+    cekurte_google_api_application_name: Cekurte ZCPE
     cekurte_google_api_client_id: 203716685927-4p4np9viqbmf6f39haletqqrcu4qmjbl.apps.googleusercontent.com
     cekurte_google_api_client_secret: gg3G4XqGRFPXZFC8V2-ORdrm
     cekurte_google_api_redirect_uri: http://127.0.0.1/admin/connect/check-google
     cekurte_google_api_developer_key:
+    cekurte_google_api_use_state: auth
+    cekurte_google_api_use_access_type: offline
+    cekurte_google_api_approval_prompt: force
     cekurte_google_api_use_objects: true
