--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,7 @@
         "cekurte/uploaderbundle": "1.0.*@dev",
         "cekurte/userbundle": "1.1.*@dev",
 
-        "google/apiclient": "1.0.*@dev",
-        "guzzlehttp/guzzle": "~4.0"
+        "google/apiclient": "1.0.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
