Registrado o CekurteGoogleApiBundle, disparo de email (ainda não funcionando com o template) mas já realiza o disparo do email usando a conta do usuário que está logado na administração. Acredito que o problema seja por conta de uma limitação do protocolo que pede que existam apenas 70 caracteres por linha.

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "cekurte/uploaderbundle": "1.0.*@dev",
         "cekurte/userbundle": "1.1.*@dev",
 
-        "google/apiclient": "1.0.*@dev"
+        "google/apiclient": "1.0.*@dev",
+        "cekurte/google-api-bundle": "1.0.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
