--- a/app/Resources/fixtures/CekurteCustomUserBundle/Group.yml
+++ b/app/Resources/fixtures/CekurteCustomUserBundle/Group.yml
@@ -2,7 +2,7 @@ Cekurte\Custom\UserBundle\Entity\Group:
     groupAdmin:
         __construct:
             - "Admin"
-            - ['ROLE_SUPER_ADMIN', 'ROLE_ADMIN']
+            - ['ROLE_SUPER_ADMIN', 'ROLE_ADMIN', 'ROLE_GMAIL']
     groupDefault:
         __construct:
             - "Default"
