--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -27,6 +27,10 @@ fos_js_routing:
 # ------------------------------------------------------------------------------
 # FOSUserBundle
 
+cekurte_custom_user:
+    resource:   "@CekurteCustomUserBundle/Resources/config/routing/fosuser.yml"
+    prefix:     /admin/
+
 fos_user_security:
     resource:   "@FOSUserBundle/Resources/config/routing/security.xml"
 
