--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,8 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_CONTRIBUTOR: ROLE_USER
+        ROLE_ADMIN:       ROLE_CONTRIBUTOR
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
@@ -75,5 +76,5 @@ security:
         # -> Secured Area
         - { path: ^/area-do-usuario,    role: [ROLE_USER] }
         - { path: ^/api,                role: [ROLE_API] }
-        - { path: ^/admin,              role: [ROLE_ADMIN] }
+        - { path: ^/admin,              role: [ROLE_CONTRIBUTOR] }
         # -> end
