Criada uma área onde usuários que não estão autenticados podem utilizar um gerador de template de pergunta/resposta que forneça uma saída em modo texto, onde ela seja copiada para o clipboard e possa ser colada em qualquer cliente de e-mail. Isto irá permitir que os usuários utilizem o sistema mesmo sem estarem logados, seja por conta de não confiarem na autenticação ou por não possuírem conta no gmail.

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,10 @@
     "jquery.validation": "1.11.1",
     "jQuery-Mask-Plugin": "1.5.4",
     "blueimp-file-upload": "9.5.7",
-    "select2": "3.4.8"
+    "select2": "3.4.8",
+    "zeroclipboard": "2.1.5"
+  },
+  "resolutions": {
+    "zeroclipboard": "2.1.5"
   }
 }
