--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,6 +3,9 @@ cekurte_zcpe:
     type:     annotation
     prefix:   /
 
+_bazinga_jstranslation:
+    resource: "@BazingaJsTranslationBundle/Resources/config/routing/routing.yml"
+
 # ------------------------------------------------------------------------------
 # CekurteUploaderBundle
 
