--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "google/apiclient": "1.0.*@dev",
         "cekurte/google-api-bundle": "1.0.*@dev",
         "jms/translation-bundle": "1.1.0",
+        "jms/i18n-routing-bundle": "1.1.1",
         "willdurand/js-translation-bundle": "2.1.0"
     },
     "scripts": {
