--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -185,3 +185,8 @@ oneup_uploader:
 fos_js_routing:
     routes_to_expose:
         - cekurte_ajax_liipimagine_uploader
+
+jms_i18n_routing:
+    default_locale: "%locale%"
+    locales: [en_US, pt_BR]
+    strategy: prefix_except_default
