--- a/src/Cekurte/Custom/UserBundle/Resources/config/routing/fosuser.yml
+++ b/src/Cekurte/Custom/UserBundle/Resources/config/routing/fosuser.yml
@@ -1,44 +1,44 @@
-_admin_fos_user_security:
+admin_fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
-_admin_fos_user_profile:
+admin_fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
     prefix: /profile
 
-_admin_fos_user_register:
+admin_fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
     prefix: /register
 
-_admin_fos_user_resetting:
+admin_fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
     prefix: /resetting
 
-_admin_fos_user_change_password:
+admin_fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
 
-_admin_fos_user_group:
+admin_fos_user_group:
     resource: "@FOSUserBundle/Resources/config/routing/group.xml"
     prefix: /group
 
 # ------------------------------------------------------------------------------
 # Security
 
-_admin_fos_user_security_login:
+admin_fos_user_security_login:
     pattern:  /login
     defaults: { _controller: FOSUserBundle:Security:login }
 
-_admin_fos_user_security_check:
+admin_fos_user_security_check:
     pattern:  /login_check
     defaults: { _controller: FOSUserBundle:Security:check }
 
-_admin_fos_user_security_logout:
+admin_fos_user_security_logout:
     pattern:  /logout
     defaults: { _controller: FOSUserBundle:Security:logout }
 
 # ------------------------------------------------------------------------------
 # Profile
 
-_admin_fos_user_profile_show:
+admin_fos_user_profile_show:
     pattern:  /profile
     defaults: { _controller: FOSUserBundle:Profile:show }
