--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,7 +1,7 @@
 services:
     oauth_custom_user_provider:
         class: Cekurte\Custom\UserBundle\Security\Core\User\FOSUBUserProvider
-        arguments: [@fos_user.user_manager,{facebook: facebook_id, google: google_id}, @service_container]
+        arguments: [@fos_user.user_manager,{google: google_id}, @service_container]
         calls:
             - [ setEntityManager, [ @doctrine.orm.entity_manager ] ]
     twig.extension.text:
