--- a/app/Resources/fixtures/CekurteCustomUserBundle/User.yml
+++ b/app/Resources/fixtures/CekurteCustomUserBundle/User.yml
@@ -3,13 +3,24 @@ Cekurte\Custom\UserBundle\Entity\User:
         username: admin
         name: Admin
         email: sistemas@cekurte.com
-        enabled: false
+        enabled: true
         plainPassword: 123
         city: @city4549
         created: <dateTime()>
         deleted: false
         groups:
             - @groupAdmin
+    userDefault:
+        username: default
+        name: Default
+        email: jpcercal@cekurte.com
+        enabled: true
+        plainPassword: 123
+        city: @city4549
+        created: <dateTime()>
+        deleted: false
+        groups:
+            - @groupDefault
     userApiPHPQuiz:
         username: apiphpquiz
         name: APP PHP Quiz
